--- a/gb/24/6/13/n14269643.md
+++ b/gb/24/6/13/n14269643.md
@@ -7,7 +7,7 @@
 </h6>
 <hr>
 <p>【大纪元2024年06月13日讯】（大纪元记者常怀仁台湾台北报导）内政部13日举行记者会，内容包含社会住宅进度及预算说明、“警消勤务安全促进与事件调查会”推动情形，前者是2025年后的社宅推动，以达成8年百万租屋家庭支持计划为目标；后者则是在今年6月底前完成勤安会的设置，并召开第一次会议。</p>
-<figure id="14269645" aria-describedby="caption-14269645" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14269645-688617-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2024/06/id14269645-688617-450x253.jpg" alt="社会住宅进度。" width="500" /></a><figcaption id="caption-14269645" class="wp-caption-text">社会住宅进度。（内政部提供）</figcaption></figure>
+<figure id="14269645" aria-describedby="caption-14269645" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14269645-688617-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/06/id14269645-688617-450x253.jpg" alt="社会住宅进度。" width="500" /></a><figcaption id="caption-14269645" class="wp-caption-text">社会住宅进度。（内政部提供）</figcaption></figure>
 <p>内政部次长董建宏表示，内政部长刘世芳在部务会报听取国土署关于“社会住宅进度及预算”报告后裁示，2025年后的社宅推动，以达成8年“百万租屋家庭支持计划”为目标，在“直接兴建、包租代管、租金补贴”等三大方向持续努力。</p>
 <p>关于直接兴建，董建宏指出，相关用地的盘点、规划、都市计划的变迁、土地取得等，后续需要各部会协助之处，请国土署滚动检讨；包租代管与租金补贴部分，也希望让有需求的国人，得到必要的照顾。</p>
 <p>董建宏说，部长表示国土署先前已获行政院备查的“推动社会住宅成果与提升社宅用地供给精进措施”，包括未来针对社宅进行生活圈规划、多元取得社宅用地，结合社会福利措施，以“小造镇”的方式兴办社宅，提升社宅的生活机能、推动地方发展。</p>
@@ -15,7 +15,7 @@
 <p>董建宏指出，在报告过程里面，他们最关切的是，部长特别在意期程的部分，从过去八年开始逐步推动过程里面，一开始先由地方兴建，但过程发现，地方政府可能因为种种因素有很多困境无法达成后，之后就由中央大幅兴建。</p>
 <p>至于勤安会，内政部主任秘书黄骏逸表示，勤安会由基层警察、消防人员代表、资深退休人员、专家学者等共同组成，期透过会议讨论、咨询研讨过程凝聚共识，透过科技化、人性化的方式解决问题。</p>
 <p>关于运作方式，黄骏逸说，采任务分组，针对警政议题、消防议题、权益与安全保障、事件调查等四大面向进行。关注焦点包括警消装备、训练需求、勤务安全、心理卫生、家庭关系辅导、科技运用、超时工作及重大伤亡事件预防性策略等。</p>
-<figure id="14269644" aria-describedby="caption-14269644" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14269644-688616-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2024/06/id14269644-688616-450x253.jpg" alt="社会住宅兴办计划（第3次修正）经费。" width="500" /></a><figcaption id="caption-14269644" class="wp-caption-text">社会住宅兴办计划（第3次修正）经费。（内政部提供）</figcaption></figure>
+<figure id="14269644" aria-describedby="caption-14269644" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14269644-688616-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/06/id14269644-688616-450x253.jpg" alt="社会住宅兴办计划（第3次修正）经费。" width="500" /></a><figcaption id="caption-14269644" class="wp-caption-text">社会住宅兴办计划（第3次修正）经费。（内政部提供）</figcaption></figure>
 <p>责任编辑：吕美琪</p>
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/21/10/22/n13322952.md#1">台内政部将修法 强制消防申报</a></li>
@@ -30,29 +30,28 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/26/n14004645.md#1">台内政部组织法三读通过 林右昌：内政治理的里程碑</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/25/n10085548.md#1" target="_blank">郑兢业：人吃与吃人（一 ）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/2/n11295577.md#1" target="_blank">西方法轮功学员忆师父欧洲传法 谈修炼故事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/31/n10265684.md#1" target="_blank">共产暴政录：中共为什么要败坏中国人的道德</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/11/28/n8535217.md#1" target="_blank">年轻秘书长年病号 幸遇法轮大法无药而愈</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265705.md#1">【未解之谜】阿南德最新预言：相同天象再现 人间将有异动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266607.md#1">端午节吃粽子起源不因纪念屈原？一起来揭谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14268821.md#1">濒死游历天堂 英女透露人类将有大事发生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/26/n14167203.md#1">药学博士：自幼伴随我的鼻敏感和哮喘消失了</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263161.md#1">【古道人生】媳妇煮蚯蚓给眼盲婆婆吃 即时招来天谴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14268667.md#1">【新闻看点】吉林凶嫌伤美国教师案 诸多疑点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14269080.md#1">【时事金扫描】乌首攻俄本土 击毁俄超级战机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268550.md#1">【秦鹏观察】中共鼓动“义和团” 砸了自己脚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14267991.md#1">四川成都凌晨发生巨响 民众被惊醒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267898.md#1">四美国教师在吉林公园遇刺 国会议员关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268570.md#1">美籍讲师讲述吉林公园遇刺事件经过</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267839.md#1">曾遭中共打压 台湾佳丽高曼容摘世界选美后冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14269230.md#1">大陆端午档电影10年最差 刘德华新片或巨亏</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268574.md#1">胡歌睽违6年低调访台 活动资讯曝光引瞩目</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268629.md#1">《九龙城寨》香港票房破亿 有望打破影史纪录</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267926.md#1">汤唯自曝最常用韩语 放闪导演丈夫一脸害羞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266367.md#1">南瓜遇见地瓜 创意素食甜点汤品太好吃了</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/6/1/n13750290.md#1">注意五个吃粽小技巧 窈窕过端午</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14268931.md#1">如何让蔬果存放久一点？ 专家教你几招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268268.md#1">这个工作习惯会让你看似“无能” 赶快改正</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/16/n14251692.md#1">爸妈别乱发脾气 珍贵的亲子关系重在“信任”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300810.md#1">【未解之谜】日本最强预言：三千世界面临大清洗 人神历劫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/30/n14301175.md#1">一两黄金一块砖 紫禁城“金砖”怎地这么高贵？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/18/n14293177.md#1">《货郎图》——有趣的故事传承</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300734.md#1">目睹临终病患与亡者对话 护士质疑无神论</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14303947.md#1">【菁英论坛】中共进入“治脸”时代</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304257.md#1">【时事金扫描】瓦格纳现委国 马杜罗约架马斯克</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303886.md#1">【新闻欣视角】中共两战区司令突换人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303843.md#1">网曝湖南挂反共横幅者更多细节</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304119.md#1">【更新】2024年巴黎奥运奖牌榜 8月3日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303894.md#1">携妻女游日本 胡歌与女儿互动同框首曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304255.md#1">《心的温度》上映首日 2名观众 票房仅91元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304297.md#1">郑中基突开除经理人 宣布：下月高雄唱完后离开</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304294.md#1">知名摇滚天团“史密斯飞船”巡演中宣布退休</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304239.md#1">昆凌分享7岁儿一句话 曝周杰伦在家中地位</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279677.md#1">抢救落发  三招丰厚发量</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300801.md#1">研究：常见家用化学品会攻击关键脑细胞</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304411.md#1">感觉脚痛或疲劳？ 可能是你的凉鞋害的</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14302344.md#1">纳豆抗衰老、防血栓 五种人慎食</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302515.md#1">有多少食品添加剂不列在成分标签中？</a></li>
 <hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/13/n14269643.htm">内政部：警消勤安会 六月底前完成并开会</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269643.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
